@@ -3,6 +3,7 @@
 
 * add new updates here without heading until a release
 
+* admin-by-keys - Michael Hoffman
 * cygwin/mingw32 fixes - Tupone Alfredo
 * /help messages - Michael Hoffman, David Trowbridge
 * New super-bullet texture - Justin Zaun, Jeff Mills, David Trowbridge
